# evcs_fairness_hybrid_lns

./: .gitignore  LICENSE  README.md
methods/: CMakeLists.txt  lns.cpp  lns.h  main.cpp  mip.cpp  mip.h  utils.cpp  utils.h
methods/cmake/: FindGUROBI.cmake
results/: analysis.ipynb  analysize.py  output_comb.csv  output_comb_nopv.csv  output_h.csv  output_h_lns.csv  output_h_lns_mip.csv  output_mip.csv  output_pre_cc.csv  sensitivity_tau_table.csv  socs_per_instance_h_lns_mip.csv  socs_per_instance_mip.csv
